--- a/css/styles.css
+++ b/css/styles.css
@@ -170,8 +170,8 @@ ul {
   margin-left: -30px;
   margin-top: -30px;
 }
-.quality-item {
-  flex-basis: calc((100%-120px) / 4);
+.quality-slot {
+  width: calc((100%-90px) / 4);
   margin-left: 30px;
   margin-top: 30px;
 }
@@ -211,7 +211,7 @@ ul {
   margin-top: -30px;
 }
 .team-item {
-  flex-basis: calc((100%-120px / 4));
+  width: calc((100%-90px / 4));
   margin-left: 30px;
   margin-top: 30px;
   background-color: var(--primary-background-color);
@@ -282,6 +282,8 @@ ul {
   color: var(--accent-color);
 }
 /* portfolio */
+.portfolio-menu {
+}
 .portfolio-link {
   font-weight: 500;
   font-size: 16px;
@@ -295,6 +297,17 @@ ul {
 .portfolio-link:focus {
   background-color: var(--accent-color);
   color: var(--white-text-color);
+}
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+.projects-item {
+  flex-basis: calc((100%-60px / 3));
+  margin-left: 30px;
+  margin-top: 30px;
 }
 .projects-title {
   font-weight: 700;
