--- a/css/styles.css
+++ b/css/styles.css
@@ -49,16 +49,25 @@ p,
 ul {
   margin-top: 0;
   margin-bottom: 0;
+  padding-left: 0;
 }
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 .container {
-  width: 1230px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+}
+.section-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  color: var(--title-color);
+  margin-bottom: 50px;
 }
 .header-nav {
   display: flex;
@@ -68,6 +77,11 @@ ul {
 }
 
 /* header */
+.page-header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 .header-logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -76,17 +90,17 @@ ul {
   color: var(--black-text-color);
   margin-right: 93px;
 }
-.nav-list {
+.site-nav_list {
   display: flex;
 }
 .accent {
   color: var(--accent-color);
 }
-.site-nav:not(:last-child) {
+.site-nav_item:not(:last-child) {
   margin-right: 50px;
 }
 .nav-link {
-  display: block;
+  display: inline-flex;
   padding-top: 32px;
   padding-bottom: 32px;
   text-decoration: none;
@@ -106,7 +120,7 @@ ul {
   margin-left: auto;
 }
 .contact-link {
-  display: flex;
+  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
   font-weight: 500;
@@ -132,6 +146,7 @@ ul {
   background-color: var(--hero-footer-background-color);
   padding-top: 200px;
   padding-bottom: 200px;
+  text-align: center;
 }
 .hero-title {
   text-align: center;
@@ -144,7 +159,6 @@ ul {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--white-text-color);
-  width: 696px;
 }
 .hero-button {
   text-align: center;
@@ -156,6 +170,7 @@ ul {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
+  cursor: pointer;
   color: var(--white-text-color);
 }
 .hero-button:hover,
@@ -163,8 +178,13 @@ ul {
   background-color: #188ce8;
 }
 /* qualities */
+.qualities {
+  padding-top: 94px;
+  padding-bottom: 47px;
+  background-color: var(--primary-background-color);
+}
 .quality_list {
-  display: flex;
+  display: flexbox;
   align-items: center;
   flex-wrap: wrap;
   margin-left: -30px;
@@ -184,19 +204,22 @@ ul {
   color: var(--title-color);
 }
 /* services */
-.services-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
-}
 
 .services-title {
+  padding-bottom: 94px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
   color: var(--title-color);
+}
+.services-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding-right: 30px;
+  justify-content: center;
+  margin-left: -30px;
+  margin-top: -30px;
 }
 .services-item {
   flex-basis: calc((100%-90px) / 3);
@@ -204,6 +227,10 @@ ul {
   margin-top: 30px;
 }
 /* team */
+.team {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .team-list {
   display: flex;
   flex-wrap: wrap;
@@ -282,8 +309,19 @@ ul {
   color: var(--accent-color);
 }
 /* portfolio */
-.portfolio-menu {
+.portfolio-list {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 54px;
 }
+.portfolio-item {
+  display: block;
+  margin-right: 8px;
+}
+.portfolio-item:not(:last-child) {
+  margin-right: 8px;
+}
+
 .portfolio-link {
   font-weight: 500;
   font-size: 16px;
@@ -304,10 +342,14 @@ ul {
   margin-left: -30px;
   margin-top: -30px;
 }
-.projects-item {
-  flex-basis: calc((100%-240px / 9));
-  margin-left: 30px;
-  margin-top: 30px;
+.img {
+  display: block;
+}
+.projects-item:not(:nth-child(3n)) {
+  margin-right: 30px;
+}
+.projects-item:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
 }
 .projects-title {
   font-weight: 700;
