--- a/css/styles.css
+++ b/css/styles.css
@@ -69,18 +69,14 @@ ul {
   color: var(--title-color);
   margin-bottom: 50px;
 }
+
+/* header */
 .header-nav {
   display: flex;
   align-items: center;
-  justify-content: center;
+  background-color: var(--primary-background-color);
   margin: auto;
-}
-
-/* header */
-.page-header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  border-bottom: 1px solid #ececec;
 }
 .header-logo {
   font-family: Raleway, sans-serif;
@@ -127,6 +123,7 @@ ul {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  text-decoration: none;
 
   color: var(--text-color);
 }
@@ -150,9 +147,8 @@ ul {
 }
 .hero-title {
   text-align: center;
-  text-transform: uppercase;
-  max-width: 696px;
-  margin: auto 30px;
+  max-width: 700px;
+  margin: 0 auto 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -183,15 +179,15 @@ ul {
   padding-bottom: 47px;
   background-color: var(--primary-background-color);
 }
-.quality_list {
-  display: flexbox;
+.quality-list {
+  display: flex;
   align-items: center;
   flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -30px;
 }
-.quality-slot {
-  width: calc((100%-90px) / 4);
+.quality-item {
+  flex-basis: calc((100% - 120px) / 4);
   margin-left: 30px;
   margin-top: 30px;
 }
@@ -204,9 +200,13 @@ ul {
   color: var(--title-color);
 }
 /* services */
+.services {
+  padding-top: 47px;
+  padding-bottom: 94px;
+}
 
 .services-title {
-  padding-bottom: 94px;
+  margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -215,14 +215,13 @@ ul {
 }
 .services-list {
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
-  padding-right: 30px;
-  justify-content: center;
   margin-left: -30px;
   margin-top: -30px;
 }
 .services-item {
-  flex-basis: calc((100%-90px) / 3);
+  flex-basis: calc((100% - 90px) / 3);
   margin-left: 30px;
   margin-top: 30px;
 }
