--- a/css/styles.css
+++ b/css/styles.css
@@ -220,7 +220,7 @@ ul {
   margin-left: -30px;
   margin-top: -30px;
 }
-.services-item {
+.services-element {
   flex-basis: calc((100% - 90px) / 3);
   margin-left: 30px;
   margin-top: 30px;
