--- a/css/styles.css
+++ b/css/styles.css
@@ -71,12 +71,14 @@ ul {
 }
 
 /* header */
+.page-header {
+  border-bottom: 1px solid#ececec;
+}
 .header-nav {
   display: flex;
   align-items: center;
   background-color: var(--primary-background-color);
   margin: auto;
-  border-bottom: 1px solid #ececec;
 }
 .header-logo {
   font-family: Raleway, sans-serif;
@@ -220,7 +222,7 @@ ul {
   margin-left: -30px;
   margin-top: -30px;
 }
-.services-element {
+.services-item {
   flex-basis: calc((100% - 90px) / 3);
   margin-left: 30px;
   margin-top: 30px;
@@ -243,7 +245,7 @@ ul {
   background-color: var(--primary-background-color);
   border-radius: 0px 0px 4px 4px;
 }
-.team_wrapper-description {
+.team_info {
   padding-top: 30px;
   padding-bottom: 30px;
 }
@@ -286,7 +288,6 @@ ul {
   color: var(--white-text-color);
 }
 .address {
-  margin-bottom: 20px;
   font-size: 14px;
   line-height: 1.71;
   color: var(--white-text-color);
@@ -308,10 +309,15 @@ ul {
   color: var(--accent-color);
 }
 /* portfolio */
+.portfolio-menu {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .portfolio-list {
   display: flex;
   justify-content: center;
   padding-bottom: 54px;
+  margin-bottom: 34px;
 }
 .portfolio-item {
   display: block;
@@ -329,6 +335,10 @@ ul {
   color: var(--title-color);
   background-color: var(--secondary-background-color);
   cursor: pointer;
+  border-radius: 4px;
+  cursor: pointer;
+  border: 0;
+  padding: 6px 22px;
 }
 .portfolio-link:hover,
 .portfolio-link:focus {
@@ -343,6 +353,9 @@ ul {
 }
 .img {
   display: block;
+}
+.flex-element {
+  padding: 30px;
 }
 .projects-item:not(:nth-child(3n)) {
   margin-right: 30px;
