--- a/css/styles.css
+++ b/css/styles.css
@@ -238,16 +238,16 @@ ul {
   margin-left: -30px;
   margin-top: -30px;
 }
+.team-info {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 .team-item {
   width: calc((100%-90px / 4));
   margin-left: 30px;
   margin-top: 30px;
   background-color: var(--primary-background-color);
   border-radius: 0px 0px 4px 4px;
-}
-.team_info {
-  padding-top: 30px;
-  padding-bottom: 30px;
 }
 .section-title {
   font-weight: 700;
@@ -348,14 +348,14 @@ ul {
 .projects {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
 }
 .img {
   display: block;
 }
 .flex-element {
-  padding: 30px;
+  padding: 20px 24px;
+  border: 1px solid #eeeeee;
+  border-top: 0;
 }
 .projects-item:not(:nth-child(3n)) {
   margin-right: 30px;
